# poolmind

./: .cursorignore  .dockerignore  .env.example  .env.prod  .gitignore  .prettierignore  .prettierrc  API_CLIENT_README.md  DEPLOYMENT.md  Makefile  README.md  README.old.md  api_local_server.py  app.py  docker-compose.prod.yml  docker-compose.yml  env.production.example  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poolmind.ipynb  poolmind.md  poolmind_cli.py  pyproject.toml  requirements.txt  research.py  setup.py  test_api_client.py  turbo.json
.cursor/rules/: poolmind.mdc
apps/orchestrator/: Dockerfile  eslint.config.mjs  package.json
apps/orchestrator/docs/: authentication.md  notifications.md  queue-notifications.md  telegram-authentication.md  telegram-integration.md  transactions.md
apps/orchestrator/src/: app.controller.ts  app.module.ts  main.ts  openapi.controller.ts
apps/platform/: .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package.json
apps/platform/app/: globals.css  layout.tsx  loading.tsx  page.tsx
contracts/: Clarinet.toml  package.json
contracts/contracts/: poolmind.clar
contracts/deployments/: default.simnet-plan.yaml  default.testnet-plan.yaml
contracts/tests/: poolmind-v1-0.test.ts  poolmind.test.ts
orchestrator/: .gitignore  docker-compose.yml
orchestrator/scripts/: generate-hmac-signature.js
orchestrator/src/: app.ts  server.ts
platform/: package.json  pnpm-lock.yaml
platform/app/: globals.css  layout.tsx  page.tsx
platform/components/: faq-section.tsx  features-grid-section.tsx  footer.tsx  hero-section.tsx  how-it-works-section.tsx  navbar.tsx  stats-section.tsx  telegram-cta-section.tsx  testimonials-section.tsx  theme-toggle.tsx
platform/docs/: authentication-setup.md  mongoose-setup.md
platform/lib/: api-schemas.ts  auth.ts  avatar.ts  database.ts  mongoose.ts
platform/types/: mongoose.d.ts
poolmind/: __init__.py  api_client.py  main.py
poolmind/ai/: agent.py
poolmind/core/: arbitrage.py  config.py  pool_state.py
poolmind/utils/: logging_setup.py  market_data.py
reference/static/: index.html
scripts/: mongo-init.js
telegram-app/: .gitignore  Dockerfile
telegram-app/src/: index.ts
tests/: conftest.py  test_agent.py  test_api.py  test_arbitrage.py  test_config.py  test_pool_state.py
(+163 files in other folders)
